# uwp-wgs

./: .gitignore  LICENSE  README.md  pyproject.toml
uwp_wgs/: __init__.py  __main__.py  container.py  remotecache.py  transfer_save.py
